<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_favorites"
            android:icon="@drawable/menu_favorites"
            android:title="@string/menu_favorites" />
        <item
            android:id="@+id/directoryFragment"
            android:icon="@drawable/menu_teams"
            android:title="@string/menu_teams" />

        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/menu_calendar"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/menu_admin"
            android:title="@string/menu_admin"
            />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/key_outline"
            android:title="Logout"
            />
    </group>
</menu>